--- a/styles.css
+++ b/styles.css
@@ -662,14 +662,7 @@ a{
 
   #project2{
     margin-left:120px;
-    background-image: url(./images/projects/p2.png);
-  }
-  #project3{
-    background-image: url(./images/projects/Project3.png);
-  }
-  #project4{
-    margin-left:120px;
-    background-image: url(./images/projects/Project4.png);
+    background-image: url(./images/projects/pp2.png);
   }
 
 
