--- a/styles.css
+++ b/styles.css
@@ -813,7 +813,7 @@ a{
     background-image: url(./images/projects/p2.png);
   }
   #project3{
-    background-image: url(./images/projects/Project3.png);
+    background-image: url(./images/projects/p3.png);
   }
   #project4{
     margin-left:120px;
